Redux Setup + OpenWeatherApi Service

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-OPENWEATHER_KEY = '17ceee868f05e35dbaa89ff1e89f6c24'
-OPENWEATHER_URL = ''
+OPENWEATHER_API_KEY = '17ceee868f05e35dbaa89ff1e89f6c24'
