--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/toast": "^1.0.9",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.9.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "^19.1.0",
@@ -24,6 +27,9 @@
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-svg": "^15.2.0",
+    "react-redux": "^9.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
