--- a/app.json
+++ b/app.json
@@ -7,6 +7,9 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+     "extra": {
+      "OPENWEATHER_API_KEY": "17ceee868f05e35dbaa89ff1e89f6c24"
+    },
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
