--- a/package.json
+++ b/package.json
@@ -11,25 +11,27 @@
   "dependencies": {
     "@expo/html-elements": "^0.4.2",
     "@gluestack-ui/actionsheet": "^0.2.53",
+    "@gluestack-ui/alert": "^0.1.16",
     "@gluestack-ui/button": "^1.0.14",
-    "@gluestack-ui/fab": "^0.1.28",
     "@gluestack-ui/icon": "^0.1.27",
-    "@gluestack-ui/image": "^0.1.17",
     "@gluestack-ui/input": "^0.1.38",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
-    "@gluestack-ui/pressable": "^0.1.23",
     "@gluestack-ui/select": "^0.1.31",
     "@gluestack-ui/toast": "^1.0.9",
     "@legendapp/motion": "^2.4.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~53.0.9",
+    "expo-image": "~2.1.7",
+    "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
+    "lodash": "^4.17.21",
     "lucide-react-native": "^0.511.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -37,6 +39,7 @@
     "react-native": "0.79.2",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
