--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "react-native-svg": "^15.2.0",
     "react-redux": "^9.2.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^3.1.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
@@ -56,6 +55,7 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
